fix #1 Add various basic files
