# openapi/openapi-generated/go/api.go
@@ -1,0 +1,61 @@
+/*
+ * go-housework
+ *
+ * 家事タスクを管理するAPIサーバです。
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"net/http"
+)
+
+
+// DefaultApiRouter defines the required methods for binding the api requests to a responses for the DefaultApi
+// The DefaultApiRouter implementation should parse necessary information from the http request, 
+// pass the data to a DefaultApiServicer to perform the required actions, then write the service results to the http response.
+type DefaultApiRouter interface { 
+	CreateFamily(http.ResponseWriter, *http.Request)
+	CreateTask(http.ResponseWriter, *http.Request)
+	CreateUser(http.ResponseWriter, *http.Request)
+	DeleteFamily(http.ResponseWriter, *http.Request)
+	DeleteFamilyMember(http.ResponseWriter, *http.Request)
+	DeleteTask(http.ResponseWriter, *http.Request)
+	DeleteUser(http.ResponseWriter, *http.Request)
+	GetHealth(http.ResponseWriter, *http.Request)
+	ListFamilyMembers(http.ResponseWriter, *http.Request)
+	ListTasks(http.ResponseWriter, *http.Request)
+	Login(http.ResponseWriter, *http.Request)
+	RegisterFamilyMember(http.ResponseWriter, *http.Request)
+	ResetPassword(http.ResponseWriter, *http.Request)
+	ShowFamily(http.ResponseWriter, *http.Request)
+	UpdateFamily(http.ResponseWriter, *http.Request)
+	UpdateTask(http.ResponseWriter, *http.Request)
+}
+
+
+// DefaultApiServicer defines the api actions for the DefaultApi service
+// This interface intended to stay up to date with the openapi yaml used to generate it, 
+// while the service implementation can ignored with the .openapi-generator-ignore file 
+// and updated with the logic required for the API.
+type DefaultApiServicer interface { 
+	CreateFamily(RequestCreateFamily) (interface{}, error)
+	CreateTask(RequestCreateTask) (interface{}, error)
+	CreateUser(RequestCreateUser) (interface{}, error)
+	DeleteFamily() (interface{}, error)
+	DeleteFamilyMember(int64) (interface{}, error)
+	DeleteTask(int64) (interface{}, error)
+	DeleteUser() (interface{}, error)
+	GetHealth() (interface{}, error)
+	ListFamilyMembers() (interface{}, error)
+	ListTasks(string) (interface{}, error)
+	Login(string, string) (interface{}, error)
+	RegisterFamilyMember(RequestRegisterFamilyMember) (interface{}, error)
+	ResetPassword(RequestResetPassword) (interface{}, error)
+	ShowFamily() (interface{}, error)
+	UpdateFamily(RequestUpdateFamily) (interface{}, error)
+	UpdateTask(RequestUpdateTask) (interface{}, error)
+}
